[project]
name = "pdf-audiobook"
version = "0.1.0"
description = "Convert PDF books and articles to audiobooks using Kokoro-82M TTS"
requires-python = ">=3.11"
dependencies = [
    "kokoro>=0.9.4",
    "soundfile",
    "pymupdf",
    "numpy",
    "fastapi>=0.100",
    "uvicorn[standard]",
    "python-multipart",
]

[project.scripts]
pdf-audiobook = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
